--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/JLuboff/connect-mssql-v2#readme",
   "dependencies": {
+    "@types/mssql": "^4.3.1",
+    "mssql": "^6.0.0",
     "tslint-config-airbnb": "^5.11.2"
   }
 }
