--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "mssql": "^6.0.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.15.15",
     "@types/jest": "^24.0.23",
+    "dotenv": "^8.2.0",
     "express-session": "^1.17.0",
     "jest": "^24.9.0",
     "tslint-config-airbnb": "^5.11.2"
