--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "connect-mssql-v2",
   "version": "1.0.0",
   "description": "MS SQL Server session store for Express Session",
-  "main": "store.js",
+  "main": "dist/store.js",
+  "types": "dist/store.d.ts",
   "scripts": {
     "test": "jest --watch ./dist/test"
   },
