--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "connect-mssql-v2",
   "version": "1.0.0",
   "description": "MS SQL Server session store for Express Session",
-  "main": "dist/store.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/store",
+  "types": "dist/store.d.ts",
   "scripts": {
+    "prepublishOnly": "rmdir /S /Q dist && tsc",
     "test": "jest --watch ./dist/test"
   },
   "repository": {
@@ -25,15 +26,19 @@
   "homepage": "https://github.com/JLuboff/connect-mssql-v2#readme",
   "dependencies": {
     "@types/mssql": "^4.3.1",
-    "mssql": "^6.0.0"
+    "mssql": "^6.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/express-session": "^1.15.15",
+    "@types/express-session": "^1.15.16",
     "@types/jest": "^24.0.23",
     "dotenv": "^8.2.0",
     "express-session": "^1.17.0",
     "jest": "^24.9.0",
     "tslint-config-airbnb": "^5.11.2"
-  }
+  },
+  "files": [
+    "dist/src/store.js",
+    "dist/src/store.d.ts"
+  ]
 }
