--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "connect-mssql-v2",
   "version": "1.0.0",
   "description": "MS SQL Server session store for Express Session",
-  "main": "dist/store",
-  "types": "dist/store.d.ts",
+  "main": "dist/src/store",
+  "types": "dist/src/store.d.ts",
   "scripts": {
     "prepublishOnly": "rmdir /S /Q dist && tsc",
     "test": "jest --watch ./dist/test"
