--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connect-mssql-v2",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "MS SQL Server session store for Express Session",
   "main": "dist/src/store",
   "types": "dist/src/store.d.ts",
@@ -25,17 +25,22 @@
   },
   "homepage": "https://github.com/JLuboff/connect-mssql-v2#readme",
   "dependencies": {
-    "@types/mssql": "^4.3.1",
+    "@types/mssql": "^6.0.0",
     "mssql": "^6.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.15.16",
     "@types/jest": "^24.0.23",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
     "dotenv": "^8.2.0",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-typescript": "^6.3.1",
+    "eslint-plugin-import": "^2.18.2",
     "express-session": "^1.17.0",
     "jest": "^24.9.0",
-    "tslint-config-airbnb": "^5.11.2"
+    "typescript": "^3.7.3"
   },
   "files": [
     "dist/src/store.js",
