Ignore server.test.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,5 +61,5 @@
     // "emitDecoratorMetadata": true,
     /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "exclude": ["node_modules", ".env"]
+  "exclude": ["node_modules", ".env", "test/server.test.ts"]
 }
