--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": ["airbnb-typescript/base"]
+  "extends": ["airbnb-typescript/base"],
+  "parserOptions": {
+    "project": [
+      "./tsconfig.json"
+    ]
+  }
 }
