--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sql",
     "express",
     "session",
-    "store"
+    "store",
+    "mssql"
   ],
   "author": "Jason Luboff",
   "license": "MIT",
@@ -24,23 +25,23 @@
     "url": "https://github.com/JLuboff/connect-mssql-v2/issues"
   },
   "homepage": "https://github.com/JLuboff/connect-mssql-v2#readme",
-  "dependencies": {
-    "@types/mssql": "^6.0.0",
+  "peerDependencies": {
     "mssql": "^6.1.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.17.0",
-    "@types/jest": "^25.1.3",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
+    "@types/jest": "^26.0.9",
+    "@types/mssql": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^7.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "express-session": "^1.17.0",
-    "jest": "^25.1.0",
-    "typescript": "^3.8.2"
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-typescript": "^9.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "express-session": "^1.17.1",
+    "jest": "^26.4.0",
+    "typescript": "^3.9.7"
   },
   "files": [
     "dist/src/store.js",
