--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "typescript": "^3.9.7",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
+    "prettier": "^2.0.5"
   },
   "files": [
     "dist/src/store.js",
