--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connect-mssql-v2",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "description": "MS SQL Server session store for Express Session",
   "main": "dist/src/store",
   "types": "dist/src/store.d.ts",
@@ -32,20 +32,20 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.17.0",
-    "@types/jest": "^26.0.9",
+    "@types/jest": "^26.0.10",
     "@types/mssql": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "dotenv": "^8.2.0",
-    "eslint": "^7.6.0",
+    "eslint": "^7.7.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-plugin-import": "^2.22.0",
     "express-session": "^1.17.1",
-    "jest": "^26.4.0",
-    "typescript": "^3.9.7",
     "husky": "^4.2.5",
+    "jest": "^26.4.0",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.7"
   },
   "files": [
     "dist/src/store.js",
