--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,9 @@
     "project": [
       "./tsconfig.json"
     ]
+  },
+  "rules": {
+    "import/no-extraneous-dependencies" : "off",
+    "@typescript-eslint/no-redeclare": "off"
   }
 }
