--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connect-mssql-v2",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "MS SQL Server session store for Express Session",
   "main": "dist/src/store",
   "types": "dist/src/store.d.ts",
@@ -27,25 +27,26 @@
   },
   "homepage": "https://github.com/JLuboff/connect-mssql-v2#readme",
   "dependencies": {
-    "mssql": "^6.3.1"
+    "mssql": "^7.2.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/express-session": "^1.17.3",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.20",
-    "@types/mssql": "^6.0.7",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.19.0",
+    "@types/mssql": "^7.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "express-session": "^1.17.1",
-    "husky": "^4.3.8",
+    "eslint-plugin-import": "^2.24.2",
+    "express-session": "^1.17.2",
+    "husky": "^7.0.2",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.3.2",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "files": [
     "dist/src/store.js",
