--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": ["airbnb-typescript/base"],
+  "extends": ["airbnb-base", "airbnb-typescript/base"],
   "parserOptions": {
     "project": [
       "./tsconfig.json"
