--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "strict": true /* Enable all strict type-checking options. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   },
-  "exclude": ["node_modules", ".env", "test/server.test.ts"]
+  "exclude": ["node_modules", ".env", "test/server.test.ts", "coverage"]
 }
