--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connect-mssql-v2",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "MS SQL Server session store for Express Session",
   "main": "dist/src/store",
   "types": "dist/src/store.d.ts",
@@ -27,27 +27,28 @@
   },
   "homepage": "https://github.com/JLuboff/connect-mssql-v2#readme",
   "dependencies": {
-    "mssql": "^8.0.2"
+    "mssql": "^8.1.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^27.4.1",
     "@types/mssql": "^7.1.5",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "dotenv": "^16.0.0",
-    "eslint": "^8.11.0",
+    "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.3",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "express-session": "^1.17.2",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "lint-staged": "^12.3.7",
-    "prettier": "^2.6.0",
+    "jest": "^28.0.1",
+    "jest-jasmine2": "^28.0.1",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   },
   "files": [
     "dist/src/store.js",
