--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "dist/src/store",
   "types": "dist/src/store.d.ts",
   "scripts": {
-    "prepublishOnly": "rmdir /S /Q dist && tsc",
+    "prepublishOnly": "npm run clean && npm run build",
+    "build": "npx tsc",
     "test": "jest --watch ./dist/test",
-    "lint": "npx eslint src --ext .ts"
+    "lint": "npx eslint src --ext .ts",
+    "clean": "npx rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -47,6 +49,7 @@
     "jest-jasmine2": "^28.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
