chore: update test script to run once
- added test:dev script that will run in watch mode

[skip ci]

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prepublishOnly": "npm run clean && npm run build",
     "build": "npx tsc",
-    "test": "jest --watch ./dist/test",
+    "test": "jest ./dist/test",
     "lint": "npx eslint src --ext .ts",
     "clean": "npx rimraf dist"
   },
