--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -25,7 +25,7 @@ jobs:
       - run: npm run build
       - run: npm run lint
       - name: Install a SQL Server suite of tools
-        uses: potatoqualitee/mssqlsuite@v1.5.1`
+        uses: potatoqualitee/mssqlsuite@v1.5.1
         with:
           install: sqlengine
       - run: npm run test
