chore: add missing server+database env props

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -39,3 +39,5 @@ jobs:
         env:
           SQLUSER: sa
           SQLPASSWORD: dbatools.I0
+          SQLSERVER: localhost
+          SQLDATABASE: tempdb
