--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "connect-mssql-v2",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "MS SQL Server session store for Express Session",
   "main": "dist/src/store",
   "types": "dist/src/store.d.ts",
   "scripts": {
-    "prepublishOnly": "rmdir /S /Q dist && tsc",
+    "prepublishOnly": "rm -rf dist && tsc",
     "test": "jest --watch ./dist/test",
-    "lint": "npx eslint src --ext .ts"
+    "lint": "npx eslint src --ext .ts",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -32,35 +33,31 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.17.7",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.3",
     "@types/mssql": "^8.1.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.40.0",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
     "express-session": "^1.17.3",
-    "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "jest-jasmine2": "^29.5.0",
-    "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
+    "husky": "^8.0.0",
+    "jest": "^29.6.1",
+    "jest-jasmine2": "^29.6.1",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "files": [
     "dist/src/store.js",
     "dist/src/store.d.ts"
   ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged --quiet"
-    }
-  },
   "lint-staged": {
-    ".{ts}": [
+    "src/**/*.{js,ts}": [
+      "eslint --cache --fix",
       "prettier --write"
     ]
   }
