--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,13 +4,14 @@ FROM mcr.microsoft.com/devcontainers/dotnet:0-${VARIANT}
 
 
 # [Choice] Node.js version: none, lts/*, 18, 16, 14
-ARG NODE_VERSION="lts"
+ARG NODE_VERSION="20"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
+# NOTE: disabled this as this would always fail?
 # Install SQL Tools: SQLPackage and sqlcmd
-COPY mssql/installSQLtools.sh installSQLtools.sh
-RUN bash ./installSQLtools.sh \
-     && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
+# COPY mssql/installSQLtools.sh installSQLtools.sh
+# RUN bash ./installSQLtools.sh \
+#      && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
