--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         # Update 'VARIANT' to pick a version of .NET: 3.1-focal, 6.0-focal
         VARIANT: '6.0-focal'
         # Optional version of Node.js
-        NODE_VERSION: 'lts'
+        NODE_VERSION: '20'
 
     volumes:
       - ..:/workspace:cached
