--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "dist/src/store",
   "types": "dist/src/store.d.ts",
   "scripts": {
-    "prepublishOnly": "rm -rf dist && tsc",
-    "test": "jest --watch ./dist/test",
-    "lint": "npx eslint src --ext .ts",
-    "prepare": "husky install"
+    "prepublishOnly": "npm run clean && npm run build",
+    "build": "tsc",
+    "test": "jest ./dist/test",
+    "lint": "eslint src --ext .ts",
+    "clean": "npm run clean:dist && npm run clean:coverage",
+    "clean:dist": "rimraf dist",
+    "clean:coverage": "rimraf coverage"
   },
   "repository": {
     "type": "git",
@@ -48,6 +51,7 @@
     "jest-jasmine2": "^29.7.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
