fix: set explicit ubuntu 24 version
- latest is 25, will downgrade to 22 if this doesn't work

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   # TODO: Add windows build if possible
   build-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24
 
     strategy:
       matrix:
