--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
   "rules": {
     "import/no-extraneous-dependencies" : "off",
     "@typescript-eslint/no-redeclare": "off",
-    "import/no-import-module-exports": "off"
+    "import/no-import-module-exports": "off",
+    "no-await-in-loop": "off"
   }
 }
