--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connect-mssql-v2",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "description": "MS SQL Server session store for Express Session",
   "main": "dist/src/store",
   "types": "dist/src/store.d.ts",
@@ -35,25 +35,26 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/express-session": "^1.17.10",
-    "@types/jest": "^29.5.11",
-    "@types/mssql": "^9.1.4",
+    "@types/express-session": "^1.18.1",
+    "@types/jest": "^29.5.14",
+    "@types/mssql": "^9.1.7",
+    "@types/tedious": "^4.0.14",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "express-session": "^1.17.3",
+    "eslint-plugin-import": "^2.31.0",
+    "express-session": "^1.18.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-jasmine2": "^29.7.0",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.5.3",
     "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "files": [
     "dist/src/store.js",
